RESOLVED FIXED66704
[chromium] WebViewImpl should not reshape the 3D context
https://bugs.webkit.org/show_bug.cgi?id=66704
Summary [chromium] WebViewImpl should not reshape the 3D context
Iain Merrick
Reported 2011-08-22 13:17:12 PDT
This is now handled by the compositor. Reshapes need to be done on the compositor thread.
Attachments
Remove two reshape calls. (1.80 KB, patch)
2011-08-22 13:19 PDT, Iain Merrick
no flags
Iain Merrick
Comment 1 2011-08-22 13:19:13 PDT
Created attachment 104723 [details] Remove two reshape calls.
Nat Duca
Comment 2 2011-08-22 13:22:43 PDT
Comment on attachment 104723 [details] Remove two reshape calls. Looks good. Should probably "test" that things work still by (a) visiting a page with WebGL and making sure it works and then (b) killing the GPU process and making sure the page still recovers from lost context.
Iain Merrick
Comment 3 2011-08-22 17:08:16 PDT
I manually tested WebGL and about:gpucrash
WebKit Review Bot
Comment 4 2011-08-22 17:37:27 PDT
Comment on attachment 104723 [details] Remove two reshape calls. Clearing flags on attachment: 104723 Committed r93566: <http://trac.webkit.org/changeset/93566>
WebKit Review Bot
Comment 5 2011-08-22 17:37:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.