[chromium] WebViewImpl should not reshape the 3D context https://bugs.webkit.org/show_bug.cgi?id=66704

Patch by Iain Merrick <husky@google.com> on 2011-08-22
Reviewed by James Robinson.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::createLayerTreeHostContext3D):
(WebKit::WebViewImpl::graphicsContext3D):

Canonical link: https://commits.webkit.org/82545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93566 268f45cc-cd09-0410-ab3c-d52691b4dbfc